osd: add start of a new style for OSD widgets
Such as those seen in Documents, gnome-settings-daemon and Totem.
Basically move out of gnome-applications.css the relevant styling
information, clean it up and make it generic enough to be usable from
different sources.

--- a/themes/Adwaita/gtk-3.0/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/Makefile.am
@@ -16,6 +16,7 @@ EXTRA_DIST = \
 	gtk.css \
 	gtk-dark.css \
 	gtk-main.css \
+	gtk-main-common.css \
 	gtk-main-dark.css \
 	gtk-widgets.css \
 	gtk-widgets-backgrounds.css \
