Add PNG data for the converted icon apps

--- a/themes/HighContrast/Makefile-icons.am
+++ b/themes/HighContrast/Makefile-icons.am
@@ -185,11 +185,15 @@ EXTRA_DIST = \
 ./icons/48x48/apps/utilities-terminal.png  \
 ./icons/48x48/apps/accessories-calculator.png  \
 ./icons/48x48/apps/preferences-system-date-and-time.png  \
+./icons/48x48/apps/evolution.png  \
+./icons/48x48/apps/gnome-documents.png  \
 ./icons/48x48/apps/preferences-desktop-wallpaper.png  \
 ./icons/48x48/apps/system-users.png  \
 ./icons/48x48/apps/system-file-manager.png  \
+./icons/48x48/apps/devhelp.png  \
 ./icons/48x48/apps/preferences-desktop-accessibility.png  \
 ./icons/48x48/apps/utilities-system-monitor.png  \
+./icons/48x48/apps/gnome-boxes.png  \
 ./icons/48x48/apps/preferences-desktop-remote-desktop.png  \
 ./icons/48x48/apps/accessories-text-editor.png  \
 ./icons/48x48/apps/preferences-system-network-proxy.png  \
@@ -458,11 +462,15 @@ EXTRA_DIST = \
 ./icons/24x24/apps/utilities-terminal.png  \
 ./icons/24x24/apps/accessories-calculator.png  \
 ./icons/24x24/apps/preferences-system-date-and-time.png  \
+./icons/24x24/apps/evolution.png  \
+./icons/24x24/apps/gnome-documents.png  \
 ./icons/24x24/apps/preferences-desktop-wallpaper.png  \
 ./icons/24x24/apps/system-users.png  \
 ./icons/24x24/apps/system-file-manager.png  \
+./icons/24x24/apps/devhelp.png  \
 ./icons/24x24/apps/preferences-desktop-accessibility.png  \
 ./icons/24x24/apps/utilities-system-monitor.png  \
+./icons/24x24/apps/gnome-boxes.png  \
 ./icons/24x24/apps/preferences-desktop-remote-desktop.png  \
 ./icons/24x24/apps/accessories-text-editor.png  \
 ./icons/24x24/apps/preferences-system-network-proxy.png  \
@@ -1050,11 +1058,15 @@ EXTRA_DIST = \
 ./icons/16x16/apps/utilities-terminal.png  \
 ./icons/16x16/apps/accessories-calculator.png  \
 ./icons/16x16/apps/preferences-system-date-and-time.png  \
+./icons/16x16/apps/evolution.png  \
+./icons/16x16/apps/gnome-documents.png  \
 ./icons/16x16/apps/preferences-desktop-wallpaper.png  \
 ./icons/16x16/apps/system-users.png  \
 ./icons/16x16/apps/system-file-manager.png  \
+./icons/16x16/apps/devhelp.png  \
 ./icons/16x16/apps/preferences-desktop-accessibility.png  \
 ./icons/16x16/apps/utilities-system-monitor.png  \
+./icons/16x16/apps/gnome-boxes.png  \
 ./icons/16x16/apps/preferences-desktop-remote-desktop.png  \
 ./icons/16x16/apps/accessories-text-editor.png  \
 ./icons/16x16/apps/preferences-system-network-proxy.png  \
@@ -1323,11 +1335,15 @@ EXTRA_DIST = \
 ./icons/32x32/apps/utilities-terminal.png  \
 ./icons/32x32/apps/accessories-calculator.png  \
 ./icons/32x32/apps/preferences-system-date-and-time.png  \
+./icons/32x32/apps/evolution.png  \
+./icons/32x32/apps/gnome-documents.png  \
 ./icons/32x32/apps/preferences-desktop-wallpaper.png  \
 ./icons/32x32/apps/system-users.png  \
 ./icons/32x32/apps/system-file-manager.png  \
+./icons/32x32/apps/devhelp.png  \
 ./icons/32x32/apps/preferences-desktop-accessibility.png  \
 ./icons/32x32/apps/utilities-system-monitor.png  \
+./icons/32x32/apps/gnome-boxes.png  \
 ./icons/32x32/apps/preferences-desktop-remote-desktop.png  \
 ./icons/32x32/apps/accessories-text-editor.png  \
 ./icons/32x32/apps/preferences-system-network-proxy.png  \
@@ -1596,11 +1612,15 @@ EXTRA_DIST = \
 ./icons/22x22/apps/utilities-terminal.png  \
 ./icons/22x22/apps/accessories-calculator.png  \
 ./icons/22x22/apps/preferences-system-date-and-time.png  \
+./icons/22x22/apps/evolution.png  \
+./icons/22x22/apps/gnome-documents.png  \
 ./icons/22x22/apps/preferences-desktop-wallpaper.png  \
 ./icons/22x22/apps/system-users.png  \
 ./icons/22x22/apps/system-file-manager.png  \
+./icons/22x22/apps/devhelp.png  \
 ./icons/22x22/apps/preferences-desktop-accessibility.png  \
 ./icons/22x22/apps/utilities-system-monitor.png  \
+./icons/22x22/apps/gnome-boxes.png  \
 ./icons/22x22/apps/preferences-desktop-remote-desktop.png  \
 ./icons/22x22/apps/accessories-text-editor.png  \
 ./icons/22x22/apps/preferences-system-network-proxy.png  \
@@ -1869,11 +1889,15 @@ EXTRA_DIST = \
 ./icons/256x256/apps/utilities-terminal.png  \
 ./icons/256x256/apps/accessories-calculator.png  \
 ./icons/256x256/apps/preferences-system-date-and-time.png  \
+./icons/256x256/apps/evolution.png  \
+./icons/256x256/apps/gnome-documents.png  \
 ./icons/256x256/apps/preferences-desktop-wallpaper.png  \
 ./icons/256x256/apps/system-users.png  \
 ./icons/256x256/apps/system-file-manager.png  \
+./icons/256x256/apps/devhelp.png  \
 ./icons/256x256/apps/preferences-desktop-accessibility.png  \
 ./icons/256x256/apps/utilities-system-monitor.png  \
+./icons/256x256/apps/gnome-boxes.png  \
 ./icons/256x256/apps/preferences-desktop-remote-desktop.png  \
 ./icons/256x256/apps/accessories-text-editor.png  \
 ./icons/256x256/apps/preferences-system-network-proxy.png  \
