Hardcode a second color for the adwaita background
If we don't specify both pcolor and scolor, the background panel
shows a color swatch, which is distracting and useless for
this background.

https://bugzilla.gnome.org/show_bug.cgi?id=675463

--- a/themes/Adwaita/backgrounds/adwaita.xml.in.in
+++ b/themes/Adwaita/backgrounds/adwaita.xml.in.in
@@ -7,5 +7,6 @@
     <options>zoom</options>
     <shade_type>solid</shade_type>
     <pcolor>#3465a4</pcolor>
+    <scolor>#000000</scolor>
   </wallpaper>
 </wallpapers>
