switch: render switch grip lines with an SVG asset
Using two background layers.

--- a/themes/Adwaita/gtk-3.0/assets/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/assets/Makefile.am
@@ -137,4 +137,6 @@ EXTRA_DIST = 		\
 	sidebar-radio-prelight.svg \
 	sidebar-radio-selected.svg \
 	sidebar-radio-selected-dark.svg \
-	sidebar-radio-selected-prelight.svg
+	sidebar-radio-selected-prelight.svg \
+	switch-slider-grip.svg \
+	switch-slider-grip-dark.svg
