Add an option to disable building of gtk3 engines
This makes it possible only build & install without depending on
Gtk+ 3.0 which is useful for shipping Gtk+2.x applications.

https://bugzilla.gnome.org/show_bug.cgi?id=676045

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,9 @@
 enginedir = $(libdir)/gtk-3.0/$(GTK_VERSION)/theming-engines
-engine_LTLIBRARIES = libadwaita.la
+
+engine_LTLIBRARIES =
+if GTK3
+engine_LTLIBRARIES += libadwaita.la
+endif
 
 assetsdir = $(datadir)/themes/Adwaita/gtk-3.0/assets
 
