--- a/themes/HighContrast/Makefile.am
+++ b/themes/HighContrast/Makefile.am
@@ -11,7 +11,11 @@ themedir = $(datadir)/themes/$(THEME_NAME)
 
 theme_DATA = index.theme
 
-noinst_PROGRAMS = create-highcontrast
+noinst_PROGRAMS =
+if GTK3
+noinst_PROGRAMS += create-highcontrast
+endif
+
 create_highcontrast_SOURCES = create-highcontrast.c
 create_highcontrast_CFLAGS = $(HIGHCONTRAST_CFLAGS)
 create_highcontrast_LDADD = $(HIGHCONTRAST_LIBS) -lm
