pane-separator: render the pane separator grip with an SVG asset
Use a background layer instead of C code for it.

--- a/themes/Adwaita/gtk-3.0/assets/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/assets/Makefile.am
@@ -47,6 +47,8 @@ EXTRA_DIST = 		\
 	menuitem-radio-checked.png \
 	menuitem-radio-checked-insensitive.png \
 	menuitem-radio-checked-selected.png \
+	pane-separator-grip.svg \
+	pane-separator-grip-vertical.svg \
 	radio-checked.png \
 	radio-checked-alt.png \
 	radio-checked-alt-dark.png \
